--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.3.0",
     "randopeep": "^1.1.6"
   }
 }
